ASSERTION FAILED: lineEndingEllipsisPolicy != LineEndingEllipsisPolicy::WhenContentOverflowsInInlineDirection || truncateRight.has_value() || right(boxes.last()) == visualRightForContentEnd /app/webkit/Source/WebCore/layout/formattingContexts/inline/displ https://bugs.webkit.org/show_bug.cgi?id=262262 <rdar://problem/116503519>

Reviewed by Antti Koivisto.

Zero width content should never need ellipsis.

* LayoutTests/fast/text/overflow-ellipsis-on-empty-content-expected.txt: Added.
* LayoutTests/fast/text/overflow-ellipsis-on-empty-content.html: Added.
* Source/WebCore/layout/formattingContexts/inline/display/InlineDisplayLineBuilder.cpp:
(WebCore::Layout::InlineDisplayLineBuilder::trailingEllipsisVisualRectAfterTruncation):

Canonical link: https://commits.webkit.org/276089@main